tests/files/lexer_tests/should_fail/072.cmdr
// Lexer should fail because of an unterminated backtick
a = $"Unterminated command in format {`echo "hello"} right here";